kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  annotations:
    lbipam.cilium.io/ips: 10.10.98.160
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres
    role: primary
